--- a/Fish.ipynb
+++ b/Fish.ipynb
@@ -33,7 +33,9 @@
       "source": [
         "# Workshop\n",
         "\n",
-        "This example uses the Fish market dataset from Kaggle: https://www.kaggle.com/aungpyaeap/fish-market"
+        "This example uses the Fish market dataset from Kaggle: https://www.kaggle.com/aungpyaeap/fish-market\n",
+        "\n",
+        "Number predictions: https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/tutorials/quickstart/beginner.ipynb"
       ]
     },
     {
